improving abstractions
